2008-05-15  Glenn Morris  <rgm@gnu.org>

	* emacs.c (USAGE1, standard_args): Remove -disable-font-backend.

2008-05-15  Chong Yidong  <cyd@stupidchicken.com>

	* fns.c (init_fns): Don't initialize weak_hash_tables here.
	(init_weak_hash_tables): New fun.  Initialize weak_hash_tables.

	* alloc.c (init_alloc_once): Call init_weak_hash_tables.

2008-05-15  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (ftfont_list): Downcase family name to check generic
	families.

	* xfaces.c (Finternal_set_lisp_face_attribute): Be sure to make a
	font-spec for QCfont value.

	* fontset.c (Fnew_fontset): Call font_unparse_xlfd with 256-byte
	buffer.  Check the return value of it.

2008-05-14  Jason Rumney  <jasonr@gnu.org>

	* w32term.c (w32_get_glyph_overhangs): Remove.
	(w32_redisplay_interface): Use x_get_glyph_overhangs instead.

2008-05-14  Kenichi Handa  <handa@m17n.org>

	* font.c (font_prop_validate): Make nil a valid value.
	(font_clear_cache): Check if the cached vector of entities is nil
	or not.

2008-05-14  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* emacs.c (main_thread): Conditionalize on
	FORWARD_SIGNAL_TO_MAIN_THREAD instead of HAVE_GTK_AND_PTHREAD.
	(main) [FORWARD_SIGNAL_TO_MAIN_THREAD]: Initialize it.

	* syssignal.h (FORWARD_SIGNAL_TO_MAIN_THREAD): New define.
	(main_thread, SIGNAL_THREAD_CHECK): Conditionalize on
	FORWARD_SIGNAL_TO_MAIN_THREAD instead of HAVE_GTK_AND_PTHREAD.

2008-05-14  Kenichi Handa  <handa@m17n.org>

	* coding.c (detect_coding_iso_2022): Ignore a coding category that
	has no corresponding coding system.

2008-05-14  Jason Rumney  <jasonr@gnu.org>

	* font.h (struct font) [WINDOWSNT]: Remove codepage member.

	* w32font.h (w32font_open_internal): Update declaration.

	* w32font.c (w32font_open_internal): Change last argument from
	w32font_info struct to font object.  Fill in font object from
	font_entity.  Get Outline metrics if possible.  Use them to
	calculate underline position and thickness.  Use xlfd name as name