@@ -1,3 +1,8 @@
+2008-05-15  Kenichi Handa  <handa@m17n.org>
+
+	* font.c (font_find_for_lface): Reflect LFACE_FONT in the font
+	preference.
+
 2008-05-15  Glenn Morris  <rgm@gnu.org>
 
 	* emacs.c (USAGE1, standard_args): Remove -disable-font-backend.
